fix: Fix help page invisibility by correctly defining animation properties

--- a/apps/orellie/content/themes/orellie-theme/style.css
+++ b/apps/orellie/content/themes/orellie-theme/style.css
@@ -1510,21 +1510,25 @@ h6 {
 }
 
 .animate-fadeInUp-delay-1 {
+  animation: fadeInUp 0.7s ease forwards;
   animation-delay: 0.1s;
   opacity: 0;
 }
 
 .animate-fadeInUp-delay-2 {
+  animation: fadeInUp 0.7s ease forwards;
   animation-delay: 0.2s;
   opacity: 0;
 }
 
 .animate-fadeInUp-delay-3 {
+  animation: fadeInUp 0.7s ease forwards;
   animation-delay: 0.3s;
   opacity: 0;
 }
 
 .animate-fadeInUp-delay-4 {
+  animation: fadeInUp 0.7s ease forwards;
   animation-delay: 0.4s;
   opacity: 0;
 }
